# WebCrawlerCpp

./: .gitignore  CMakeLists.txt  README.md  WebCrawlerCpp.cpp  WebCrawlerCpp.h  WebCrawlerCpp.sln
CppDevelopment/: CppDevelopment.cpp  CppDevelopment.vcxproj  CppDevelopment.vcxproj.filters
CppLib/: AddressCombiner.cpp  AddressCombiner.h  CppLib.vcxproj  CppLib.vcxproj.filters  HtmlRequest.cpp  HtmlRequest.h  Person.h  pch.h
Crawler/: Crawler.cpp  Crawler.vcxproj  Crawler.vcxproj.filters  Curl_get data by line.txt  result.json
Crawler/Classes/: Crawler.cpp  CrawlerRun.cpp  CrawlerRun.h  Image.h
CrawlerLib/: AddressCombiner.cpp  AddressCombiner.h  CrawlerLib.cpp  CrawlerLib.vcxproj  CrawlerLib.vcxproj.filters  CrawlerRun.cpp  CrawlerRun.h  HtmlRequest.cpp  HtmlRequest.h  ICrawlerRun.h  IHtmlRequest.h  Image.cpp  Image.h  Person.cpp  pch.h
CrawlerLibrary/: AddressCombiner.cpp  AddressCombiner.h  CrawlerLibrary.cpp  CrawlerLibrary.vcxproj  CrawlerLibrary.vcxproj.filters  HtmlRequest.cpp  HtmlRequest.h  Person.cpp  Person.h  pch.h
CrawlerTesting/: Accessories.h  AddressCombinerTest.cpp  CrawlerRunMockTest.cpp  CrawlerRunMockTest.h  CrawlerRunTest.cpp  CrawlerTesting.vcxproj  CrawlerTesting.vcxproj.filters  CrawlertRunMockTestBackup.h  MockCrawlerRun.cpp  MockCrawlerRun.h  MockHtmlRequest.h  MyCrawlerRun.cpp  MyCrawlerRun.h  TrueTest.cpp  Utils.cpp  dont_care_test_case.json  pch.h
Dependencies/curl/lib/x64-windows/: libcurl.lib
Dependencies/gumbo-query/include/gumbo-query222/: gumbo-query.cpp  gumbo-query.vcxproj  gumbo-query.vcxproj.filters
Dependencies/uri/: cpp-netlib-uri- cpp-netlib URI.url
Practice/: Practice.cpp  Practice.vcxproj  Practice.vcxproj.filters
enc_temp_folder/1bf138d93c75b3ef43f346c1bbe2230/: MockCrawlerRun.h
enc_temp_folder/25f2f86d707446d12278e0a52814b2e8/: CrawlerRunTest.cpp
enc_temp_folder/c6a73b8bc1d32335a8f29e102f52ad1/: CrawlerRun.cpp
z_CLion cmake ondevelop version/: .gitignore
(+1 files in other folders)
